<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sec_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fir_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"/>

        <Spinner
            android:id="@+id/perf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/perfomances"
            android:layout_marginTop="8dp"
            android:textColor="#FFB71C1C"
            android:textSize = "25dp"
            android:layout_marginBottom="8dp">
        </Spinner>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tic"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/tickets"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>


            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="0"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/tic"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/neg"
                android:layout_marginBottom="8dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:layout_toRightOf="@+id/count"
                android:text="-"
                android:textStyle="bold"
                android:textColor="#FFB71C1C"/>

            <Button
                android:id="@+id/pos"
                android:layout_marginBottom="8dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:layout_toRightOf="@+id/neg"
                android:text="+"
                android:textStyle="bold"
                android:textColor="#FFB71C1C"/>
        </RelativeLayout>

        <CheckBox
            android:id="@+id/not"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notif"/>

        <CheckBox
            android:id="@+id/net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soc"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ord"
            android:onClick="click"
            android:textStyle="bold"
            android:textColor="#FFB71C1C"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inf"/>
    </LinearLayout>
</ScrollView>