<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.teentheater.MainActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_theater"
            android:textSize="21dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/im"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:src="@drawable/theater"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:scaleType="centerCrop"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/text_of_theater"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="6dp"
            android:text = "@string/rep" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/performance1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/perf1"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:textSize="18sp" />

         <Button
             android:id="@+id/m1"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="@string/more_perf"
             android:onClick="onClickperf1"
             android:layout_alignParentRight="true"
             android:textStyle="bold"
             android:textColor="#FFB71C1C"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/performance2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/perf2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/m2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/more_perf"
                android:onClick="onClickperf2"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:textColor="#FFB71C1C"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/performance3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/perf3"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/m3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/more_perf"
                android:onClick="onClickperf3"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:textColor="#FFB71C1C"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soc_net"
            android:onClick="click_site"
            android:textStyle="bold"
            android:textColor="#FFB71C1C"/>

        <Button
            android:id="@+id/knowdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickdate"
            android:text="@string/date"
            android:textStyle="bold"
            android:textColor="#FFB71C1C"/>

    </LinearLayout>
</ScrollView>